--- a/.github/actions/deploy-environment/action.yml
+++ b/.github/actions/deploy-environment/action.yml
@@ -41,4 +41,4 @@ runs:
         if [ "${{ inputs.validateOnly }}" = "true" ]; then
           deployFlags+=( --dry-run )
         fi
-        sfdx project deploy start "${deployFlags[@]}" --ignore-conflicts
+        sfdx project deploy start "${deployFlags[@]}" --ignore-conflicts -l NoTestRun
