--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -113,6 +113,7 @@
 		<members>Asset.Plan_Name__c</members>
 		<members>Asset.Advisor__c</members>
 		<members>Asset.Mode__c</members>
+		<members>Asset.Interested_Party__c</members>
 		<name>CustomField</name>
 	</types>
 
