--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -267,10 +267,10 @@
 		<members>ABSLIG_Leadership</members>
 		<name>Role</name>
 	</types>
-	<types>
+	<!--<types>
 		<members>ABSLIG_Search</members>
 		<name>SearchCustomization</name>
-	</types>
+	</types> -->
 	<types>
 		<members>BusinessHours</members>
 		<name>Settings</name>
@@ -319,5 +319,5 @@
 		<name>GlobalValueSet</name>
 	</types>
 	
-	<version>60.0</version>
+	<version>61.0</version>
 </Package>
