--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,21 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
   <types>
-		<members>Case.Rejection_Reason__c</members>
-		<name>CustomField</name>
-	</types>
-	<types>
-		<members>LOB_Rejection_Reason.ABSLIG_RejectionReason_1</members>
-		<members>LOB_Rejection_Reason.ABSLIG_RejectionReason_2</members>
-		<name>CustomMetadata</name>
-	</types>
-	<types>
-		<members>aSF_createCaseWithType</members>
-		<name>LightningComponentBundle</name>
-	</types>
-	<types>
-		<members>Case.Interaction</members>
-		<name>RecordType</name>
+		<members>ABSLAMCTemplates</members>
+		<members>ABSLAMCEM</members>
+		<name>EmailFolder</name>
 	</types>
 	<version>60.0</version>
 </Package>
