Temporary update of package.xml

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,21 +1,56 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-  <types>
-		<members>Case.Rejection_Reason__c</members>
-		<name>CustomField</name>
-	</types>
-	<types>
-		<members>LOB_Rejection_Reason.ABSLIG_RejectionReason_1</members>
-		<members>LOB_Rejection_Reason.ABSLIG_RejectionReason_2</members>
-		<name>CustomMetadata</name>
-	</types>
-	<types>
-		<members>aSF_createCaseWithType</members>
-		<name>LightningComponentBundle</name>
-	</types>
-	<types>
-		<members>Case.Interaction</members>
-		<name>RecordType</name>
-	</types>
-	<version>60.0</version>
+    <types>
+        <members>ABHI_Constants</members>
+        <members>ABHI_OmniDocViewController</members>
+        <members>ABHI_OmniDocViewController_Test</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>Asf_Dynamic_Datatable_Child__mdt.Type_Attributes__c</members>
+        <name>CustomField</name>
+    </types>
+    <types>
+        <members>ABHI_OmniDocURL</members>
+        <name>CustomLabel</name>
+    </types>
+    <types>
+        <members>ABCL_Integrations.ABHI_OmniDocSearchRequest</members>
+        <members>Asf_Dynamic_Datatable_Child.ABHI_Claim_Number</members>
+        <members>Asf_Dynamic_Datatable_Child.ABHI_Compose_Email</members>
+        <members>Asf_Dynamic_Datatable_Child.ABHI_Description</members>
+        <members>Asf_Dynamic_Datatable_Child.ABHI_Document_Type</members>
+        <members>Asf_Dynamic_Datatable_Child.ABHI_File_Name</members>
+        <members>Asf_Dynamic_Datatable_Child.ABHI_OmniDoc_View</members>
+        <members>Asf_Dynamic_Datatable_Child.ABHI_Policy_Number</members>
+        <members>Asf_Dynamic_Datatable_Child.ABHI_Source_System</members>
+        <members>Asf_Dynamic_Datatable_Child.ABHI_Template_Id</members>
+        <members>Asf_Dynamic_Datatable_Child.ABHI_Uploaded_Date_Time</members>
+        <members>Asf_Dynamic_Datatable_Parent.ABHI_OmniDocView</members>
+        <name>CustomMetadata</name>
+    </types>
+    <types>
+        <members>ABHI_Asset_Record_Page</members>
+        <name>FlexiPage</name>
+    </types>
+    <types>
+        <members>Asf_Dynamic_Datatable_Child__mdt-Asf_Dynamic Datatable Child Layout</members>
+        <name>Layout</name>
+    </types>
+    <types>
+        <members>aBHI_OmniDocAwaitDocuments</members>
+        <members>aBHI_OmniDocView</members>
+        <name>LightningComponentBundle</name>
+    </types>
+    <types>
+        <members>ABHI_OmniDocDirectAPI_MockResponse</members>
+        <name>StaticResource</name>
+    </types>
+    <types>
+        <members>ABHI/ABHI_Emails/OMNI_DOC_SEND_EMAIL_1724913452870</members>
+        <members>ABHI/ABHI_Emails</members>
+        <members>ABHI</members>
+        <name>EmailTemplate</name>
+    </types>
+    <version>60.0</version>
 </Package>
