--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -17,5 +17,11 @@
 		<members>Case.Interaction</members>
 		<name>RecordType</name>
 	</types>
+	<types>
+        	<members>ABHI</members>
+        	<members>ABHI/ABHI_Emails</members>
+        	<members>ABHI/ABHI_Emails/OMNI_DOC_SEND_EMAIL_1724913452870</members>
+        	<name>EmailTemplate</name>
+    	</types>
 	<version>60.0</version>
 </Package>
